# Pieuvre

./: .gitignore  Makefile  Pieuvre.opam  README.md  dune-project
lib/: display.ml  dune  lambda.ml  types.ml
lib/lambda/: betastep.ml  display.ml  dune  fill.ml  infer_type.ml  is_alpha_convertible.ml  lambda.ml  lambda.mli  reduce.ml  typecheck.ml  types.ml
lib/parsing/: dune  lexer.mll  parser.mly  parsing.ml
lib/proof/: display.ml  dune  holes.ml  proof.ml  proof.mli  tactics.ml  types.ml
test/: alpha_convert.ml  alpha_fixed.ml  betastep.ml  dune  fresh_var.ml  get_free_variable.ml  is_alpha_convertible.ml  parse_lambda_terms.ml  reduce.ml  substitution.ml
